<resources>
    <string name="app_name">Radario</string>
    <string name="notification_label">Notifications</string>
    <string name="app_intent_uri_scheme">radario</string>
    <string name="app_user_intent">user</string>

    <string name="action_settings">Settings</string>
    <string name="action_update">Check For Update</string>
    <string name="action_share">Share</string>
    <string name="action_refresh">Refresh</string>
    <string name="nothing_to_show">Nothing to show.</string>

    <string name="bull_separator">•</string>
    <string name="action_sort_posts">Sort</string>
    <string name="action_search_posts">Search</string>

    <!--navigation drawer and menu-->
    <string name="cat_events">Events</string>
    <string name="cat_design">Design</string>
    <string name="cat_ama">AMA</string>
    <string name="cat_cabal">Tech Cabal</string>
    <string name="cat_jobs">Jobs</string>
    <string name="cat_products">Products</string>
    <string name="cat_everything">Everything</string>
    <string name="cat_meta">Meta</string>

    <string name="view_context">View Context</string>
    <!-- %1$d is the count, %2$s is the qualifier i.e singular or plural-->
    <string name="item_like_count">%1$d %2$s</string>
    <string name="item_comment_count">%1$d %2$s</string>
    <!--%1$d is the string value of the amount of time, %2$s is the unit i.e {minutes|hours|months|years}-->
    <string name="relative_time_past">%1$s %2$s ago</string>
    <string name="prompt_reply">Reply</string>

    <!--%1$s is username, %2$s is the notification type as string, %3$s is the post...-->
    <string name="notification_details"><b>%1$s</b> %2$s <b>%3$s</b></string>

    <!--topic discussion activity, menu and related layouts-->
    <string name="title_activity_topic_discussion">TopicDiscussionActivity</string>
    <string name="dummy_title">This guy built a Hotel-booking platform in 2 days, after Mark Essien challenged him</string>
    <string name="action_report_topic">Report</string>
    <string name="action_bookmark_topic">Bookmark</string>
    <string name="action_retry">Retry</string>
    <string name="dummy_excerpt">"Sorry, I missed your question. So I think it&#39;s a perspective problem. Many founders see it as &#39;their company&#39;. They own this company and their word is law and it&#39;s something that is intrinsically linked to them. I think they need to look at it from another perspective: a company is an entity of it"</string>

    <string name="no_logged_user">Anonymous</string>
    <string name="login">Sign In</string>
    <string name="login_advantage">You should be logged in except you are Obanikoro!</string>
    <string name="dismiss">Dismiss</string>

    <!--preference scree-->
    <string name="key_enable_notification">ENABLE_NOTIFICATION</string>
    <string name="key_notification_interval">NOTIFICATION_INTERVAL</string>
    <string name="title_notification_interval">Interval</string>
    <string name="summary_notification_interval">Intervals for radario to check the server for new notifications.</string>

    <string name="sort_goat">GOAT</string>
    <string name="sort_latest">Latest</string>
    <string name="sort_top_this_week">Top of the week</string>
    <string name="sort_top">Trending</string>
</resources>
