<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="2dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/comment_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/action_settings"
            />
        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bull_separator"
            android:layout_toEndOf="@id/comment_poster"
            android:textSize="10sp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parent_topic_category"
            android:layout_toEndOf="@id/separator"
            android:text="@string/cat_products"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/comment_posted_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2 weeks ago"
            android:layout_alignParentEnd="true"
            android:textSize="10sp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent_topic_title"
        android:text="@string/dummy_title"
        android:textSize="16sp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reply_excerpt"
        android:text="@string/dummy_excerpt" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="gravity">
            <ImageView
                android:id="@+id/action_like_topic"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_like"
                android:tint="@android:color/darker_gray" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/number_of_likes"
                android:text="56 likes"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textSize="10sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="gravity">
            <ImageView
                android:id="@+id/action_view_context"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:src="@drawable/ic_comment"
                android:tint="@android:color/darker_gray" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/view_context"
                android:text="@string/view_context"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textSize="10sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>