<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/active_topic_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_everything"
        android:textColor="@android:color/darker_gray"
        android:textSize="10sp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/active_topic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_title"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="24dp">

            <TextView
                android:id="@+id/topic_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="idoko"
                android:textSize="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/posted_since"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 hours ago"
                android:textSize="10sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="24dp">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_like"
                android:tint="@android:color/darker_gray"
                android:contentDescription="@string/action_search_posts"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/number_of_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="4 Likes"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_comment"
                android:tint="@android:color/darker_gray"
                android:contentDescription="@string/action_search_posts"
                android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/number_of_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="28 comments"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>